# libfobos

./: .gitignore  CMakeLists.txt  README.md  libfobos.pc.in
.github/workflows/: ci.yml
debian/: .gitignore  README.Debian.ex  README.source.ex  changelog  control  fobos-udev.install  libfobos0.install  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/upstream.ex/: metadata.ex
eval/: fobos_recorder_main.c
fobos/: fobos.c
